Fixed Overflow issue for Gaming Console Swiper

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -883,7 +883,7 @@ a.darkPeachButton:hover {
     position: relative;
     max-width: 1200px;
     width: 90%;
-
+    overflow: visible !important;
     margin: auto;
 }
 
